--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,14 +4,31 @@
 @using BlazingPizza.Services
 @inject OrderState OrderState
 
+<div class="top-bar">
+    <a class="logo" href="">
+        <img src="img/logo.svg" />
+    </a>
+    <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
+        <img src="img/pizza-slice.svg" />
+        <div>Get Pizza</div>
+    </NavLink>
+
+    <NavLink href="myorders" class="nav-tab">
+        <img src="img/bike.svg" />
+        <div>My orders</div>
+    </NavLink>
+
+</div>
+
 <div class="main">
     <h1>Lance Pizzas</h1>
     <ul class="pizza-cards">
-        @if(specials != null)
+        @if (specials != null)
         {
             @foreach (var special in specials)
             {
-                <li @onclick ="@(() => OrderState.ShowConfigurePizzaDialog(special))" style="background-image: url('@special.ImageUrl')">
+                <li @onclick="@(() => OrderState.ShowConfigurePizzaDialog(special))"
+                    style="background-image: url('@special.ImageUrl')">
                     <div class="pizza-info">
                         <span class="title">@special.Name</span>
                         @special.Description
@@ -24,22 +41,19 @@
 </div>
 
 
- @if(OrderState.ShowingConfigureDialog)
-    {
-        <ConfigurePizzaDialog 
-        Pizza="OrderState.ConfiguringPizza"
-        OnCancel ="OrderState.CancelConfigurePizzaDialog"
-        OnConfirm="OrderState.ConfirmConfigurePizzaDialog"
-        />
-    }
+@if (OrderState.ShowingConfigureDialog)
+{
+    <ConfigurePizzaDialog Pizza="OrderState.ConfiguringPizza" OnCancel="OrderState.CancelConfigurePizzaDialog"
+        OnConfirm="OrderState.ConfirmConfigurePizzaDialog" />
+}
 
 <div class="sidebar">
-    @if(order.Pizzas.Any())
+    @if (order.Pizzas.Any())
     {
         <div class="order-contents">
             <h2>Your order</h2>
 
-            @foreach(var configuredPizza in order.Pizzas)
+            @foreach (var configuredPizza in order.Pizzas)
             {
                 <div class="cart-item">
                     <div class="title">@(configuredPizza.Size)" @configuredPizza.Special.Name</div>
@@ -60,15 +74,16 @@
     <div class="order-total @(order.Pizzas.Any() ? "" : "hidden")">
         Total:
         <span class="total-price">@order.GetFormattedTotalPrice()</span>
-        <a href="checkout" class="@(OrderState.Order.Pizzas.Count == 0 ? "btn btn-warning disabled" : "btn btn-warning")">
+        <a href="checkout"
+            class="@(OrderState.Order.Pizzas.Count == 0 ? "btn btn-warning disabled" : "btn btn-warning")">
             Order >
         </a>
     </div>
 </div>
-@code{
+@code {
     List<PizzaSpecial> specials = new List<PizzaSpecial>();
-        Order order => OrderState.Order;
-      protected override async Task OnInitializedAsync()
+    Order order => OrderState.Order;
+    protected override async Task OnInitializedAsync()
     {
         specials = await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(NavigationManager.BaseUri + "specials");
     }
