--- a/Pages/MyOrders.razor
+++ b/Pages/MyOrders.razor
@@ -49,7 +49,7 @@
                     @if (@item.StatusText != "Delivered")
                     {
                         <div class="col flex-grow-0">
-                            <a href="myorders/" class="btn btn-success">
+                            <a href="myorders/@item.Order.OrderId" class="btn btn-success">
                                 Track &gt;
                             </a>
                         </div>
@@ -66,7 +66,7 @@
         protected override async Task OnParametersSetAsync()
         {
             ordersWithStatus = await HttpClient.GetFromJsonAsync<List<OrderWithStatus>>(
-                $"{NavigationManager.BaseUri}orders");
+                $"{NavigationManager.BaseUri}myorders");
                 
         }
 }
